@@ -5,7 +5,10 @@ Changelog
 2.1.9 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Dossiercover: Implemented cropping of to long descriptions.
+  Issue #1654 Deckblatt Schriftgroesse anpassen
+  https://extranet.4teamwork.ch/extern/opengever-kanton-zug/sprint-backlog/1654/
+  [phgross]
 
 
 2.1.8 (2012-06-21)
